--- a/code/CSS/style_index.css
+++ b/code/CSS/style_index.css
@@ -274,7 +274,7 @@ select:valid + .mandatory-sign::after {
     background: radial-gradient(circle, rgb(2, 120, 18), rgb(107, 107, 252));
     color: var(--my-txt-color-3);
     text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-    width: 85%;
+    width: 55%;
     margin: 0.75rem auto;
     display: block;
 }
